[package]
name = "grapple_redis_macros"  
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Helper function for `grapple_db` Redis Client"
authors = ["grapple228"]
readme = "README.md"
repository = "https://github.com/grapple228/rust_redis_macros.git"

[lib]
proc-macro = true    

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"  
deadpool-redis = "0.21"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }