[package]
name = "grapple_redis_macros"  
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Helper macros for `grapple_db` Redis Client"
authors = ["grapple228"]
readme = "README.md"
repository = "https://github.com/grapple228/rust_redis_macros.git"

[lib]
proc-macro = true    

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
serde_json = "1"
serde = {version = "1", features = ["derive"]}
grapple_db = { version = "0.2", features = ["redis"] }
